--- a/views/admin-home.ejs
+++ b/views/admin-home.ejs
@@ -11,13 +11,19 @@
     <h1>Welcome to Admin Page</h1>
 
 
+    <a href="/admin/logout">Logout</a>
+
     <button class="btnAction" id="logout" onclick="window.location.href = '/admin/logout';">
         Logout
     </button>
 
+    <a href="viewallmembers">View All Users</a>
+
     <button class="btnAction" id="viewMembers" onclick="window.location.href = 'viewallmembers';">
         View All Members
     </button>
+
+    <a href="viewallads">viewallads</a>
 
     <button class="btnAction" id="viewAds" onclick="window.location.href = 'viewallads';">
         View All Ads
