--- a/views/update-userpassword.ejs
+++ b/views/update-userpassword.ejs
@@ -21,9 +21,9 @@
                 <button type="submit"> Update</button>
             </div>
             <div>
-                <a href="/staff/login"> Already a Register User</a>
+                <a href="/user/login"> Already a Register User</a>
           
-                <a href="/staff/forgot"> Forgot Password </a>
+                <a href="/user/forgot"> Forgot Password </a>
             </div>
         </form>
     </center>
