--- a/views/update.ejs
+++ b/views/update.ejs
@@ -53,7 +53,7 @@
                 <button type="submit"> Update </button>
             </div>
             <div>
-                <a href="/user/"> Already a Registed User </a>
+                <a href="/user/login"> Already a Registed User </a>
           
                 <a href="/user/forgot" class="">forgot Password</a>
             </div>
