--- a/views/user-home.ejs
+++ b/views/user-home.ejs
@@ -17,7 +17,7 @@
             <a href=""><img src="/logo.jpg" alt="newLOGO" class="logo"></a>
             
             <ul>
-                <li><a href="/user"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="/user/index"><i class="fa fa-home"></i> Home</a></li>
                 <li><a href="/user/update/<%= userData._id%> ">update Profile</a></li>
                 <li><a href="/user/updatepassword/<%= userData._id%> ">update Password</a></li>
                 
