--- a/views/listsads.ejs
+++ b/views/listsads.ejs
@@ -13,20 +13,21 @@
             <%if(isMember)
             {%>
                 <ul>
-                <li><a href="/user"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="/user/update/<%= taskData._id%> ">update Profile</a></li>
-                <li><a href="/user/updatepassword/<%= taskData._id%> ">update Password</a></li>
+                <li><a href="/user/index"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="/user/update/<%=taskData.id%> ">update Profile</a></li>
+                <li><a href="/user/updatepassword/<%=taskData.id%> ">update Password</a></li>
                 
                 <li><a href="/user/uploadview">Created Ads</a></li>
-                <li><a href="/user/viewad/<%= taskData._id%>">View  Ads</a></li>
+                <li><a href="/user/viewad/<%=taskData._id%>">View  Ads</a></li>
                 <li><a href="/user/logout/">logout</a></li>
                 
             </ul>
-            <button class="btnAction" id="home" onclick="window.location.href = '/user/';">
+            <button class="btnAction" id="home" onclick="window.location.href = '/user/index';">
                 Back to Home Page
             </button>
             <%}
             else{%>
+                
             <button class="btnAction" id="home" onclick="window.location.href = '/admin/index';">
             Back to Home Page
             </button>    
@@ -108,7 +109,7 @@
                 <% }) } %>
         </tbody>
     </table>
-
+ 
 </body>
 <style>
   
